deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms2
  template:
    metadata:
      labels:
        app: ms2
    spec:
      containers:
      - name: ms2
        image: prashantdey/microservicenode:ms2
        ports:
        - containerPort: 3001
