service2.yml
apiVersion: v1
kind: Service
metadata:
  name: ms2-service
spec:
  selector:
    app: ms2
  ports:
  - protocol: TCP
    port: 3005
    targetPort: 3001
  type: ClusterIP
